// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render normally as component 1`] = `
<View
  style={
    Array [
      Object {
        "marginHorizontal": 20,
        "marginTop": 7.5,
      },
      undefined,
    ]
  }
>
  <Component />
</View>
`;

exports[`should render normally as component with custom styles 1`] = `
<View
  style={
    Array [
      Object {
        "marginHorizontal": 20,
        "marginTop": 7.5,
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  <Component />
</View>
`;

exports[`should render normally as text 1`] = `
<View
  style={
    Object {
      "marginHorizontal": 20,
      "marginTop": 7.5,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#838387",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "includeFontPadding": false,
          "textAlignVertical": "center",
        },
        undefined,
      ]
    }
  >
    TEXT
  </Text>
</View>
`;

exports[`should render normally as text with custom styles 1`] = `
<View
  style={
    Object {
      "marginHorizontal": 20,
      "marginTop": 7.5,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#838387",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "includeFontPadding": false,
          "textAlignVertical": "center",
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    TEXT
  </Text>
</View>
`;
